<resources>
    <string name="app_name">E-commerce App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="tagline">your own shopping app</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have any account?</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_here">Sign In here</string>
    <string name="have_an_account">If you have an account?</string>
    <string name="top_products">Top products</string>
    <string name="featured_products">Featured Products</string>
    <string name="popular_products">Popular Products</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
        typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>