<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.ProductFragment">

    <ImageButton
        android:id="@+id/imageViewBack"
        android:layout_width="36dp"
        android:layout_height="26dp"
        android:layout_margin="@dimen/horizontal_margin"
        android:src="@drawable/back_icon"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="@dimen/text_size_24"
        android:textColor="@color/dark_grey"
        android:layout_marginVertical="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_margin="@dimen/horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="@dimen/text_size_18"
        android:layout_marginVertical="@dimen/horizontal_margin"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />

    <TextView
        android:id="@+id/textViewProductDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/horizontal_margin"
        android:text="@string/lorem_ipsum"
        app:layout_constraintBottom_toTopOf="@+id/containedButton"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintStart_toStartOf="@+id/textViewPrice"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

    <Button
        android:id="@+id/containedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/horizontal_margin"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>